--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,12 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        google()
+        // Add the following repositories:
+        google()  // Google's Maven repository
+
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         jcenter()
         
     }
@@ -13,6 +18,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.3.2'
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
     }
 }
 
